force-app/main/default/objects/Fundraising_Team__c/Fundraising_Team__c.object-meta.xml
<CustomObject>
    <label>Fundraising Team</label>
    <nameField>
        <label>Fundraising Team Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fundraising Teams</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>