force-app/main/default/objects/Fundraising_Team__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Fundraising Teams</relationshipLabel>
    <relationshipName>Fundraising_Teams</relationshipName>
    <type>Lookup</type>
</CustomField>