force-app/main/default/objects/Fundraising_Team__c/fields/Organization__c.field-meta.xml
<CustomField>
    <fullName>Organization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Fundraising Teams</relationshipLabel>
    <relationshipName>Fundraising_Teams</relationshipName>
    <type>Lookup</type>
</CustomField>