force-app/main/default/objects/Fundraising_Team__c/fields/Previous_Year_Donations__c.field-meta.xml
<CustomField>
    <fullName>Previous_Year_Donations__c</fullName>
    <label>Previous Year Donations</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>